[package]
name = "factory"
version = "0.1.0"
edition = "2021"

[unstable]
build-std = ["core", "alloc"]

[dependencies]
rand = {  version = "0.8.5", default-features = false, features = ["small_rng"] }
psp = "0.3.11"

[dependencies.asset_macros]
path = "./libs/asset_macros"

[dependencies.zero_derive]
path = "./libs/zero_derive"