[package]
name = "psp-engine"
version = "0.1.0"
edition = "2024"

[unstable]
build-std = ["core", "alloc"]

[dependencies]
rand = {  version = "0.8.5", default-features = false, features = ["small_rng"] }
psp = "0.3.11"

[dependencies.asset_macros]
path = "macros/assettype_macro"

[dependencies.zero_derive]
path = "macros/zero_derive"

[dependencies.psp-alloc]
path = "crates/psp-alloc"

[dependencies.asset-handling]
path = "crates/asset-handling"

[dependencies.misc]
path = "crates/misc"
