[package]
name = "asset-handling"
version = "0.1.0"
edition = "2024"

[unstable]
build-std = ["core", "alloc"]

[dependencies]
rand = {  version = "0.8.5", default-features = false, features = ["small_rng"] }
psp = "0.3.11"

[dependencies.misc]
path = "../misc"

[dependencies.asset_macros]
path = "../../macros/assettype_macro"
